# EdgeML

./: .gitignore
tools/SeeDot/: SeeDotX86.py
tools/SeeDot/seedot/: mainX86.py
tools/SeeDot/x86_usps_bonsai/: .gitignore  Makefile  library.cpp  seedot_fixed.cpp  seedot_fixed_model.h
tools/SeeDot/x86_usps_bonsai/input/: X.csv  info.txt  input.sd
tools/SeeDot/x86_usps_protonn/: .gitignore  CMakeLists.txt  Makefile  protonn_float_model.h  seedot_fixed.cpp
tools/SeeDot/x86_usps_protonn/input/: X.csv  info.txt  input.sd  seedot_fixed_model.h
